[gd_scene load_steps=48 format=3 uid="uid://mcw45p2qpgx"]

[ext_resource type="Script" uid="uid://c7wgx4n0xbxlb" path="res://enemies/GoblinMelee.gd" id="1_7w5j5"]
[ext_resource type="Texture2D" uid="uid://ctxdhlgv5efgl" path="res://sprites/goblin_1/attack1/attack1_0000.png" id="2_ahe2r"]
[ext_resource type="Texture2D" uid="uid://d24xfnyeavdyl" path="res://sprites/goblin_1/attack1/attack1_0001.png" id="3_diqtu"]
[ext_resource type="Texture2D" uid="uid://gxxwsyr1ms20" path="res://sprites/goblin_1/attack1/attack1_0002.png" id="4_07tnj"]
[ext_resource type="Texture2D" uid="uid://b1j4ec06tejll" path="res://sprites/goblin_1/attack1/attack1_0003.png" id="5_1ymgk"]
[ext_resource type="Texture2D" uid="uid://cdfikivqdmajf" path="res://sprites/goblin_1/attack1/attack1_0004.png" id="6_afah1"]
[ext_resource type="Texture2D" uid="uid://cjh8rxi6seri" path="res://sprites/goblin_1/attack1/attack1_0005.png" id="7_eg8fo"]
[ext_resource type="Texture2D" uid="uid://dnppmhwbgd4gu" path="res://sprites/goblin_1/attack1/attack1_0006.png" id="8_qubvy"]
[ext_resource type="Texture2D" uid="uid://cd42npguwo35g" path="res://sprites/goblin_1/attack1/attack1_0007.png" id="9_2fns5"]
[ext_resource type="Texture2D" uid="uid://513esjf2wt87" path="res://sprites/goblin_1/attack1/attack1_0008.png" id="10_2l5kc"]
[ext_resource type="Texture2D" uid="uid://ceup0at3tyyec" path="res://sprites/goblin_1/attack1/attack1_0009.png" id="11_kyu3u"]
[ext_resource type="Texture2D" uid="uid://c4b5mfey1p2bl" path="res://sprites/goblin_1/attack1/attack1_0010.png" id="12_d3nxe"]
[ext_resource type="Texture2D" uid="uid://b8ib02y3q0k61" path="res://sprites/goblin_1/run/run_0000.png" id="13_bq5qq"]
[ext_resource type="Texture2D" uid="uid://ckwbc2hho1f0u" path="res://sprites/goblin_1/run/run_0001.png" id="14_etwt8"]
[ext_resource type="Texture2D" uid="uid://dhcs5b0ld1ohd" path="res://sprites/goblin_1/run/run_0002.png" id="15_qhjl3"]
[ext_resource type="Texture2D" uid="uid://d34m5a8g0ue7o" path="res://sprites/goblin_1/run/run_0003.png" id="16_mxwhk"]
[ext_resource type="Texture2D" uid="uid://5gjv11q2ej4s" path="res://sprites/goblin_1/run/run_0004.png" id="17_i6417"]
[ext_resource type="Texture2D" uid="uid://ctrwd4oeepx3k" path="res://sprites/goblin_1/run/run_0005.png" id="18_3ee54"]
[ext_resource type="Texture2D" uid="uid://di5an32l1drf5" path="res://sprites/goblin_1/run/run_0006.png" id="19_dmcnc"]
[ext_resource type="Texture2D" uid="uid://brry8yiaqs2ei" path="res://sprites/goblin_1/run/run_0007.png" id="20_7x55w"]
[ext_resource type="Texture2D" uid="uid://dm10s0xpqares" path="res://sprites/goblin_1/run/run_0008.png" id="21_xjh1e"]
[ext_resource type="Texture2D" uid="uid://os8d6u3kjg50" path="res://sprites/goblin_1/hurt/hurt_0000.png" id="22_qr5is"]
[ext_resource type="Texture2D" uid="uid://e2husxfunxel" path="res://sprites/goblin_1/hurt/hurt_0001.png" id="23_86fr4"]
[ext_resource type="Texture2D" uid="uid://ww563uqt1i" path="res://sprites/goblin_1/hurt/hurt_0002.png" id="24_rkhsy"]
[ext_resource type="Texture2D" uid="uid://bh5v2r756dapd" path="res://sprites/goblin_1/hurt/hurt_0003.png" id="25_df2et"]
[ext_resource type="Texture2D" uid="uid://clw3cwvr0qaxd" path="res://sprites/goblin_1/idle/idle_0000.png" id="26_imlw3"]
[ext_resource type="Texture2D" uid="uid://dppxoi1g4cuif" path="res://sprites/goblin_1/idle/idle_0001.png" id="27_pkrgn"]
[ext_resource type="Texture2D" uid="uid://6ugvjmxa2i1w" path="res://sprites/goblin_1/idle/idle_0002.png" id="28_6til5"]
[ext_resource type="Texture2D" uid="uid://gsxhvpqwdvcu" path="res://sprites/goblin_1/idle/idle_0003.png" id="29_w3w44"]
[ext_resource type="Texture2D" uid="uid://cx6e452voxytf" path="res://sprites/goblin_1/idle/idle_0004.png" id="30_b8lfw"]
[ext_resource type="Texture2D" uid="uid://c48088qjhse8k" path="res://sprites/goblin_1/idle/idle_0005.png" id="31_ma45j"]
[ext_resource type="Texture2D" uid="uid://ddtiwe2citmnb" path="res://sprites/goblin_1/idle/idle_0006.png" id="32_wldca"]
[ext_resource type="Texture2D" uid="uid://fsd7u0i0o4qt" path="res://sprites/goblin_1/idle/idle_0007.png" id="33_ocwbq"]
[ext_resource type="Texture2D" uid="uid://csb6pdpyqofii" path="res://sprites/goblin_1/idle/idle_0008.png" id="34_h2bww"]
[ext_resource type="Texture2D" uid="uid://nngvpw2xxhns" path="res://sprites/goblin_1/walk/walk_0000.png" id="35_6851i"]
[ext_resource type="Texture2D" uid="uid://bmhaxcepf66yg" path="res://sprites/goblin_1/walk/walk_0001.png" id="36_frrik"]
[ext_resource type="Texture2D" uid="uid://bnign7oia2kte" path="res://sprites/goblin_1/walk/walk_0002.png" id="37_gje7o"]
[ext_resource type="Texture2D" uid="uid://qa6v2ttk8q3h" path="res://sprites/goblin_1/walk/walk_0003.png" id="38_w57s2"]
[ext_resource type="Texture2D" uid="uid://bdqnn5yo8v12f" path="res://sprites/goblin_1/walk/walk_0004.png" id="39_ee07k"]
[ext_resource type="Texture2D" uid="uid://c2lc2vecld1ir" path="res://sprites/goblin_1/walk/walk_0005.png" id="40_q0mtr"]
[ext_resource type="Texture2D" uid="uid://h155lqbfblps" path="res://sprites/goblin_1/walk/walk_0006.png" id="41_wet8e"]
[ext_resource type="Texture2D" uid="uid://q7imcm4ym2vk" path="res://sprites/goblin_1/walk/walk_0007.png" id="42_jkvo8"]
[ext_resource type="Texture2D" uid="uid://dtgw1iimm7s44" path="res://sprites/goblin_1/walk/walk_0008.png" id="43_cfneh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k2l1j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ahe2r")
}, {
"duration": 1.0,
"texture": ExtResource("3_diqtu")
}, {
"duration": 1.0,
"texture": ExtResource("4_07tnj")
}, {
"duration": 1.0,
"texture": ExtResource("5_1ymgk")
}, {
"duration": 1.0,
"texture": ExtResource("6_afah1")
}, {
"duration": 1.0,
"texture": ExtResource("7_eg8fo")
}, {
"duration": 1.0,
"texture": ExtResource("8_qubvy")
}, {
"duration": 1.0,
"texture": ExtResource("9_2fns5")
}, {
"duration": 1.0,
"texture": ExtResource("10_2l5kc")
}, {
"duration": 1.0,
"texture": ExtResource("11_kyu3u")
}, {
"duration": 1.0,
"texture": ExtResource("12_d3nxe")
}],
"loop": true,
"name": &"attack_slash_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_bq5qq")
}, {
"duration": 1.0,
"texture": ExtResource("14_etwt8")
}, {
"duration": 1.0,
"texture": ExtResource("15_qhjl3")
}, {
"duration": 1.0,
"texture": ExtResource("16_mxwhk")
}, {
"duration": 1.0,
"texture": ExtResource("17_i6417")
}, {
"duration": 1.0,
"texture": ExtResource("18_3ee54")
}, {
"duration": 1.0,
"texture": ExtResource("19_dmcnc")
}, {
"duration": 1.0,
"texture": ExtResource("20_7x55w")
}, {
"duration": 1.0,
"texture": ExtResource("21_xjh1e")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_qr5is")
}, {
"duration": 1.0,
"texture": ExtResource("23_86fr4")
}, {
"duration": 1.0,
"texture": ExtResource("24_rkhsy")
}, {
"duration": 1.0,
"texture": ExtResource("25_df2et")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_imlw3")
}, {
"duration": 1.0,
"texture": ExtResource("27_pkrgn")
}, {
"duration": 1.0,
"texture": ExtResource("28_6til5")
}, {
"duration": 1.0,
"texture": ExtResource("29_w3w44")
}, {
"duration": 1.0,
"texture": ExtResource("30_b8lfw")
}, {
"duration": 1.0,
"texture": ExtResource("31_ma45j")
}, {
"duration": 1.0,
"texture": ExtResource("32_wldca")
}, {
"duration": 1.0,
"texture": ExtResource("33_ocwbq")
}, {
"duration": 1.0,
"texture": ExtResource("34_h2bww")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_6851i")
}, {
"duration": 1.0,
"texture": ExtResource("36_frrik")
}, {
"duration": 1.0,
"texture": ExtResource("37_gje7o")
}, {
"duration": 1.0,
"texture": ExtResource("38_w57s2")
}, {
"duration": 1.0,
"texture": ExtResource("39_ee07k")
}, {
"duration": 1.0,
"texture": ExtResource("40_q0mtr")
}, {
"duration": 1.0,
"texture": ExtResource("41_wet8e")
}, {
"duration": 1.0,
"texture": ExtResource("42_jkvo8")
}, {
"duration": 1.0,
"texture": ExtResource("43_cfneh")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7w5j5"]
radius = 17.0
height = 106.0

[sub_resource type="CircleShape2D" id="CircleShape2D_onxgn"]
radius = 162.00308

[sub_resource type="CircleShape2D" id="CircleShape2D_o3oy5"]
radius = 161.1521

[node name="EnemyGoblinSword" type="CharacterBody2D"]
script = ExtResource("1_7w5j5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k2l1j")
animation = &"walk_side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
shape = SubResource("CapsuleShape2D_7w5j5")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_onxgn")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_o3oy5")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
